--- a/info_product.html
+++ b/info_product.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="info_product.css">
     </head>
     <body>
-        <a href="index.html">Retour à l'accueil</a>
+        <button id="buttonRetour">←</button>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
         <script src="info_products.js" async defer></script>
     </body>
