--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         <a href="#topAnchor">
             <button id="btnRetourHaut" href="#idHeader">↑</button>
         </a>
-        <div id="slider_panier">
-            <p>Votre panier</p>
-        </div>
+        <div id="slider_panier"></div>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
         <script src="index.js"></script>
     </body>
