Add remove button to each item in the cart and fix item removal functionality. Redo the css of the cart slider to accommodate new button. Tested the functionality and it works as expected.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <a href="#topAnchor">
             <button id="btnRetourHaut" href="#idHeader">↑</button>
         </a>
-        <div id="slider_panier"></div>
+        <div id="slider_panier">
+        </div>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
         <script src="index.js"></script>
     </body>
