Strarting the design of the info page

--- a/info_product.html
+++ b/info_product.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" href="info_product.css">
     </head>
     <body>
+        <div id="container">
+            <div id="img">
+
+            </div>
+            <div id="infos">
+                <h1 id="name">--</h1>
+                <h2 id="price">--€</h2>
+                <p id="desc">--</p>
+            </div>
+        </div>
         <button id="buttonRetour">←</button>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
         <script src="info_products.js" async defer></script>
