Addes localstorage function to keep panier on update

--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
             <p class="page_title">Drone Store</p>
             <button id="btnPanier">Panier</button>
         </header>
-        <div id="topAnchor"></div>
-        <div id="idInfo">
-            <h1>Drone Store</h1>
-            <h2>Bienvenue sur le meilleur site de vente de materiel de drone au monde</h2>
-        </div>
-        <ul id="idNavbar">
-            <li>Drones</li>
-            <li>Accessoires</li>
-            <li>Batteries</li>
-            <li>Classement Meilleur Drones 2026</li>
-            <li>Contacts</li>
-            <li>Infos</li>
-        </ul>
-        <p class="meilleur_ventes">Meilleur Ventes</p>
-        <div id="idShop">
-        </div>
-        <a href="#topAnchor">
-            <button id="btnRetourHaut" href="#idHeader">↑</button>
-        </a>
-        <div id="slider_panier">
-        </div>
+        <main>
+            <div id="topAnchor"></div>
+            <div id="idInfo">
+                <h1>Drone Store</h1>
+                <h2>Bienvenue sur le meilleur site de vente de materiel de drone au monde</h2>
+            </div>
+            <ul id="idNavbar">
+                <li>Drones</li>
+                <li>Accessoires</li>
+                <li>Batteries</li>
+                <li>Classement Meilleur Drones 2026</li>
+                <li>Contacts</li>
+                <li>Infos</li>
+            </ul>
+            <p class="meilleur_ventes">Meilleur Ventes</p>
+            <div id="idShop">
+            </div>
+            <a href="#topAnchor">
+                <button id="btnRetourHaut" href="#idHeader">↑</button>
+            </a>
+            <div id="slider_panier">
+            </div>
+        </main>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
         <script src="index.js"></script>
     </body>
