--- a/info_product.html
+++ b/info_product.html
@@ -8,16 +8,19 @@
         <link rel="stylesheet" href="info_product.css">
     </head>
     <body>
-        <div id="container">
-            <div id="img">
-
+        <header id="idHeader">
+            <p class="page_title">Drone Store</p>
+        </header>
+        <main>
+            <div id="container">
+                <div id="img"></div>
+                <div id="infos">
+                    <h1 id="name">--</h1>
+                    <h2 id="price">--€</h2>
+                    <p id="desc">--</p>
+                </div>
             </div>
-            <div id="infos">
-                <h1 id="name">--</h1>
-                <h2 id="price">--€</h2>
-                <p id="desc">--</p>
-            </div>
-        </div>
+        </main>
         <button id="buttonRetour">←</button>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
         <script src="info_products.js" async defer></script>
