--- a/index.html
+++ b/index.html
@@ -31,6 +31,72 @@
             <p class="meilleur_ventes">Meilleur Ventes</p>
             <div id="idShop">
             </div>
+            <div id="container_tableau">
+                <table border="1" cellspacing="0" cellpadding="8">
+                    <caption><strong>Classement des meilleurs drones 2026</strong></caption>
+                    <thead>
+                        <tr>
+                        <th>Rank</th>
+                        <th>Modèle</th>
+                        <th>Usage</th>
+                        <th>Caractéristiques principales</th>
+                        <th>Prix indicatif</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <td>1</td>
+                        <td>DJI Mini 5 Pro</td>
+                        <td>Polyvalent / Débutants & pros</td>
+                        <td>Capteur 1'', 4K HDR, ~40 min vol</td>
+                        <td>≈ 799 € – 1 129 €</td>
+                        </tr>
+                        <tr>
+                        <td>2</td>
+                        <td>DJI Mini 4 Pro</td>
+                        <td>Compact voyage & vidéo</td>
+                        <td>4K/60 fps, <250 g, détect. obstacles</td>
+                        <td>≈ 759 € – 959 €</td>
+                        </tr>
+                        <tr>
+                        <td>3</td>
+                        <td>DJI Air 3S</td>
+                        <td>Créateurs & photo/vidéo avancé</td>
+                        <td>Double caméra, tracking AI, ~45 min vol</td>
+                        <td>≈ 1 099 € – 1 299 €</td>
+                        </tr>
+                        <tr>
+                        <td>4</td>
+                        <td>DJI Avata 2</td>
+                        <td>FPV / sensations immersives</td>
+                        <td>4K@100 fps, obstacles, ~23 min vol</td>
+                        <td>≈ 999 €</td>
+                        </tr>
+                        <tr>
+                        <td>5</td>
+                        <td>DJI Neo</td>
+                        <td>Débutant / budget</td>
+                        <td>Ultra léger, 4K vidéo simple</td>
+                        <td>≈ 199 €</td>
+                        </tr>
+                        <tr>
+                        <td>6</td>
+                        <td>Autel EVO Nano+</td>
+                        <td>Alternative compacte</td>
+                        <td>50 MP capteur, 4K/30 fps</td>
+                        <td>≈ 949 €</td>
+                        </tr>
+                        <tr>
+                        <td>7</td>
+                        <td>Antigravity A1</td>
+                        <td>360° FPV innovant</td>
+                        <td>Capture 8K 360°, bundle goggles</td>
+                        <td>≈ 1 359 €</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
             <a href="#topAnchor">
                 <button id="btnRetourHaut" href="#idHeader">↑</button>
             </a>
