Added css to checkout and finishing js

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div id="idShop">
             </div>
             <div id="container_tableau">
-                <table border="1" cellspacing="0" cellpadding="8">
-                    <caption><strong>Classement des meilleurs drones 2026</strong></caption>
+                <table id="tableau" border="1" cellspacing="0" cellpadding="8">
+                    <caption id="name_tableau"><strong>Classement des meilleurs drones 2026</strong></caption>
                     <thead>
                         <tr>
                         <th>Rank</th>
