to finish css of index to do css of info

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header id="idHeader">
-            <p class="page_title">Drone Store</p>
+            <p class="page_title"><a href="index.html">Drone Store</a></p>
             <button id="btnPanier">Panier</button>
         </header>
         <main>
@@ -32,7 +32,7 @@
             <div id="idShop">
             </div>
             <div id="container_tableau">
-                <table id="tableau" border="1" cellspacing="0" cellpadding="8">
+                <table id="tableau">
                     <caption id="name_tableau"><strong>Classement des meilleurs drones 2026</strong></caption>
                     <thead>
                         <tr>
