--- a/checkout.html
+++ b/checkout.html
@@ -18,12 +18,14 @@
             </div>
             <div id="payment">
                 <p id="name_payment">Paiement :</p>
-                <label for="inputName">Nom :</label>
-                <input type="text" id="inputName" placeholder="Nom">
-                <label for="inputEmail">Email :</label>
-                <input type="text" id="inputEmail" placeholder="Email">
-                <label for="inputCardNumber">Numéro de carte :</label>
-                <input type="text" id="inputCardNumber" placeholder="Numéro de carte">
+                <label for="inputPrenom">Prénom</label>
+                <input type="text" id="inputPrenom" placeholder="Prenom" required>
+                <label for="inputName">Nom</label>
+                <input type="text" id="inputName" placeholder="Nom" required>
+                <label for="inputEmail">Email</label>
+                <input type="text" id="inputEmail" placeholder="Email" required>
+                <label for="inputCardNumber">Numéro de carte</label>
+                <input type="text" id="inputCardNumber" placeholder="Numéro de carte" required>
                 <button id="btnPayer">Payer</button>
             </div>
         </div>
