to do css of info

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta charset="utf-8">
         <title>Drone Store</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="assets/logo.png">
     </head>
     <body>
         <header id="idHeader">
