added infos page todo : finish carroussel on info page

--- a/checkout.html
+++ b/checkout.html
@@ -13,10 +13,10 @@
     <main>
         <div id="container">
             <div id="infos">
-                <h2 id="price">--€</h2>
+                <h2 id="price" class="glass">--€</h2>
                 <div id="list_articles"></div>
             </div>
-            <div id="payment">
+            <div id="payment" class="glass">
                 <p id="name_payment">Paiement :</p>
                 <label for="inputPrenom">Prénom</label>
                 <input type="text" id="inputPrenom" placeholder="Prenom" required>
@@ -31,9 +31,9 @@
         </div>
     </main>
     <video autoplay muted loop><source src="assets/checkout_background.mp4" type="video/mp4"></video>
-    <button id="buttonRetour">←</button>
+    <button id="buttonRetour" class="glass">←</button>
     <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
-    <script src="checkout.js" async defer></script>
+    <script src="checkout.js"></script>
 
     
 </body>
