--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Batteries</li>
                 <li>Classement Meilleur Drones 2026</li>
                 <li>Contacts</li>
-                <li>Infos</li>
+                <li><a href="infos.html">Infos</a></li>
             </ul>
             <p class="meilleur_ventes">Meilleur Ventes</p>
             <div id="idShop">
