finished carroussel to do : add infosdrone

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         </header>
         <main>
             <div id="topAnchor"></div>
-            <div id="idInfo">
+            <div id="idInfo" class="glass">
                 <h1>Drone Store</h1>
                 <h2>Bienvenue sur le meilleur site de vente de materiel de drone au monde</h2>
             </div>
-            <ul id="idNavbar">
+            <ul id="idNavbar" class="glass">
                 <li>Drones</li>
                 <li>Accessoires</li>
                 <li>Batteries</li>
                 <li>Classement Meilleur Drones 2026</li>
                 <li>Contacts</li>
-                <li><a href="infos.html">Infos</a></li>
+                <li><a href="infos.html" class="link">Infos</a></li>
             </ul>
-            <p class="meilleur_ventes">Meilleur Ventes</p>
+            <p class="meilleur_ventes glass">Meilleur Ventes</p>
             <div id="idShop">
             </div>
             <div id="container_tableau">
@@ -105,6 +105,7 @@
             </div>
         </main>
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
+        <img id="background_img" src="assets/index_background.jpg" alt="background">
         <script src="index.js"></script>
     </body>
 </html>
