--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paiement</title>
     <link rel="stylesheet" href="checkout.css">
+    <link rel="icon" href="assets/logo.png">
 </head>
 <body>
     <header id="idHeader">
