--- a/info_product.html
+++ b/info_product.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="info_product.css">
+        <script src="https://kit.fontawesome.com/04e333ca1f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header id="idHeader">
@@ -14,15 +15,22 @@
         <main>
             <div id="container">
                 <div id="img"></div>
-                <div id="infos">
+                <div id="infos" class="glass">
                     <h1 id="name">--</h1>
                     <h2 id="price">--€</h2>
                     <p id="desc">--</p>
                 </div>
             </div>
+            <div id="caracteristic" class="glass">
+                <div class="caracteristic_container"><i class="fa-solid fa-battery-full"></i><p id="battery">--</p></div>
+                <div class="caracteristic_container"><i class="fa-solid fa-clock"></i><p id="flight_time">--</p></div>
+                <div class="caracteristic_container"><i class="fa-solid fa-signal"></i><p id="range">--</p></div>
+                <div class="caracteristic_container"><i class="fa-solid fa-gauge-high"></i><p id="top_speed">--</p></div>
+            </div>
         </main>
         <button id="buttonRetour">←</button>
+        <img src="assets/infos_product_background.jpg" alt="background" id="img_background">
         <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
-        <script src="info_products.js" async defer></script>
+        <script src="info_products.js"></script>
     </body>
 </html>
