added drone simulator

--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="idHeader">
-        <p class="page_title">Drone Store</p>
+        <p class="page_title"><a href="index.html">Drone Store</a></p>
     </header>
     <main>
         <div id="container">
@@ -27,7 +27,7 @@
                 <input type="text" id="inputEmail" placeholder="Email" required>
                 <label for="inputCardNumber">Numéro de carte</label>
                 <input type="text" id="inputCardNumber" placeholder="Numéro de carte" required>
-                <button id="btnPayer">Payer</button>
+                <button id="btnPayer" onclick="pay()">Payer</button>
             </div>
         </div>
     </main>
