--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Accessoires</li>
                 <li>Batteries</li>
                 <li>Classement Meilleur Drones 2026</li>
-                <li>Contacts</li>
+                <li><a href="game.html" class="link">Jeux</a></li>
                 <li><a href="infos.html" class="link">Infos</a></li>
             </ul>
             <p class="meilleur_ventes glass">Meilleur Ventes</p>
