--- a/info_product.html
+++ b/info_product.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header id="idHeader">
-            <p class="page_title">Drone Store</p>
+            <p class="page_title"><a href="index.html">Drone Store</a></p>
         </header>
         <main>
             <div id="container">
