added game simulator

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
     <header id="idHeader">
             <p class="page_title"><a href="index.html">Drone Store</a></p>
     </header>
-    <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer>
+    <!-- <footer id="idFooter">2026 Lucas Reutenauer Tout droits réservés</footer> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
     <script src="game.js"></script>
 
