--- a/checkout.html
+++ b/checkout.html
@@ -28,6 +28,7 @@
                 <label for="inputCardNumber">Numéro de carte</label>
                 <input type="text" id="inputCardNumber" placeholder="Numéro de carte" required>
                 <button id="btnPayer" onclick="pay()">Payer</button>
+                <p id="error"></p>
             </div>
         </div>
     </main>
