--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
             </div>
             <ul id="idNavbar" class="glass">
                 <li>Drones</li>
-                <li>Accessoires</li>
-                <li>Batteries</li>
-                <li>Classement Meilleur Drones 2026</li>
-                <li><a href="game.html" class="link">Jeux</a></li>
+                <li><a href="#name_tableau">Classement Meilleur Drones 2026</a></li>
+                <!-- <li><a href="game.html" class="link">Jeux</a></li> -->
                 <li><a href="infos.html" class="link">Infos</a></li>
             </ul>
             <p class="meilleur_ventes glass">Meilleur Ventes</p>
@@ -37,62 +35,96 @@
                     <caption id="name_tableau"><strong>Classement des meilleurs drones 2026</strong></caption>
                     <thead>
                         <tr>
-                        <th>Rank</th>
-                        <th>Modèle</th>
-                        <th>Usage</th>
-                        <th>Caractéristiques principales</th>
-                        <th>Prix indicatif</th>
+                            <th>Rank</th>
+                            <th>Modèle</th>
+                            <th>Prix</th>
+                            <th>Batterie</th>
+                            <th>Temps de vol</th>
+                            <th>Portée</th>
+                            <th>Vitesse max</th>
+                            <th>Description</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                        <td>1</td>
-                        <td>DJI Mini 5 Pro</td>
-                        <td>Polyvalent / Débutants & pros</td>
-                        <td>Capteur 1'', 4K HDR, ~40 min vol</td>
-                        <td>≈ 799 € – 1 129 €</td>
+                            <td>1</td>
+                            <td>NimbusX</td>
+                            <td>500 €</td>
+                            <td>6000 mAh</td>
+                            <td>22 min</td>
+                            <td>1500 m</td>
+                            <td>40 km/h</td>
+                            <td>NimbusX est équipé de la dernière technologie de stabilisation pour des vidéos fluides et des vols stables.</td>
                         </tr>
                         <tr>
-                        <td>2</td>
-                        <td>DJI Mini 4 Pro</td>
-                        <td>Compact voyage & vidéo</td>
-                        <td>4K/60 fps, <250 g, détect. obstacles</td>
-                        <td>≈ 759 € – 959 €</td>
+                            <td>2</td>
+                            <td>FalconEye</td>
+                            <td>450 €</td>
+                            <td>5500 mAh</td>
+                            <td>20 min</td>
+                            <td>1300 m</td>
+                            <td>38 km/h</td>
+                            <td>FalconEye est le choix parfait pour la photographie aérienne et la cartographie.</td>
                         </tr>
                         <tr>
-                        <td>3</td>
-                        <td>DJI Air 3S</td>
-                        <td>Créateurs & photo/vidéo avancé</td>
-                        <td>Double caméra, tracking AI, ~45 min vol</td>
-                        <td>≈ 1 099 € – 1 299 €</td>
+                            <td>3</td>
+                            <td>AeroFalcon</td>
+                            <td>420 €</td>
+                            <td>5200 mAh</td>
+                            <td>18 min</td>
+                            <td>1200 m</td>
+                            <td>45 km/h</td>
+                            <td>AeroFalcon combine puissance et autonomie pour les vols longue distance.</td>
                         </tr>
                         <tr>
-                        <td>4</td>
-                        <td>DJI Avata 2</td>
-                        <td>FPV / sensations immersives</td>
-                        <td>4K@100 fps, obstacles, ~23 min vol</td>
-                        <td>≈ 999 €</td>
+                            <td>4</td>
+                            <td>SkyViper</td>
+                            <td>390 €</td>
+                            <td>4500 mAh</td>
+                            <td>12 min</td>
+                            <td>900 m</td>
+                            <td>65 km/h</td>
+                            <td>SkyViper est conçu pour les courses et les acrobaties. Rapide et précis.</td>
                         </tr>
                         <tr>
-                        <td>5</td>
-                        <td>DJI Neo</td>
-                        <td>Débutant / budget</td>
-                        <td>Ultra léger, 4K vidéo simple</td>
-                        <td>≈ 199 €</td>
+                            <td>5</td>
+                            <td>AeroPulse</td>
+                            <td>370 €</td>
+                            <td>4200 mAh</td>
+                            <td>14 min</td>
+                            <td>800 m</td>
+                            <td>48 km/h</td>
+                            <td>AeroPulse offre un excellent équilibre entre vitesse et maniabilité.</td>
                         </tr>
                         <tr>
-                        <td>6</td>
-                        <td>Autel EVO Nano+</td>
-                        <td>Alternative compacte</td>
-                        <td>50 MP capteur, 4K/30 fps</td>
-                        <td>≈ 949 €</td>
+                            <td>6</td>
+                            <td>SkyRaptor</td>
+                            <td>350 €</td>
+                            <td>4000 mAh</td>
+                            <td>10 min</td>
+                            <td>500 m</td>
+                            <td>30 km/h</td>
+                            <td>Le SkyRaptor est un drone de haute précision conçu pour les acrobaties et la vitesse.</td>
                         </tr>
                         <tr>
-                        <td>7</td>
-                        <td>Antigravity A1</td>
-                        <td>360° FPV innovant</td>
-                        <td>Capture 8K 360°, bundle goggles</td>
-                        <td>≈ 1 359 €</td>
+                            <td>7</td>
+                            <td>VoltSky</td>
+                            <td>320 €</td>
+                            <td>3800 mAh</td>
+                            <td>11 min</td>
+                            <td>600 m</td>
+                            <td>60 km/h</td>
+                            <td>VoltSky est un drone agile et réactif, conçu pour les pilotes qui aiment la vitesse.</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>ThunderWing</td>
+                            <td>280 €</td>
+                            <td>3000 mAh</td>
+                            <td>8 min</td>
+                            <td>400 m</td>
+                            <td>55 km/h</td>
+                            <td>ThunderWing est un drone compact et rapide, idéal pour les courses.</td>
                         </tr>
                     </tbody>
                 </table>
